<resources>
    <string name="app_name">LibraryManagement</string>
    <string name="home">Home</string>
    <string name="function">Function</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="add_btn">Add</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="author">Author</string>
    <string name="recent_book">Recent Book</string>
    <string name="delete">Delete</string>
    <string name="hint_option">--option--</string>
    <string name="state">State</string>
    <string name="manage_author">Manage Author</string>
    <string name="update">Update\n</string>
    <string name="history">History</string>
    <string name="statistic">Statistic Book</string>
</resources>