<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item android:id="@+id/function"
        android:icon="@drawable/ic_functions"
        android:title="@string/function" />
    <item android:id="@+id/notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications" />
    <item android:id="@+id/history"
        android:icon="@drawable/baseline_history_edu_24"
        android:title="@string/history" />
    <item android:id="@+id/menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu" />
</menu>