<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.books.EditBookActivity">

    <include
        android:id="@+id/layout_header"
        layout="@layout/layout_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_header"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_book_img"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:src="@drawable/add_image" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:fontFamily="@font/mulish_regular"
                    android:textSize="20sp"/>
                <Spinner
                    android:id="@+id/spinner_add_book"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_add_book_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Name"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidthFocused="1dp"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperTextTextColor="#F12323">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_add_book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:fontFamily="@font/mulish_regular"
                    android:textSize="20sp"/>
                <Spinner
                    android:id="@+id/spinner_author"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_add_book_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="Price"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidthFocused="1dp"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperTextTextColor="#F12323">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_add_book_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_add_book_pageNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="Page Number"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidthFocused="1dp"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperTextTextColor="#F12323">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_add_book_pageNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:fontFamily="@font/mulish_regular"
                    android:textSize="20sp"/>
                <Spinner
                    android:id="@+id/spinner_state"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_add_book_des"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="Description"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidthFocused="1dp"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperTextTextColor="#F12323">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_add_book_des"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/update_book_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_login"
                    android:backgroundTint="@color/color_btn"
                    android:text="Update"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_book_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_login"
                    android:text="Add"
                    android:backgroundTint="@color/color_btn"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>